--- a/public_html/static/css/master.css
+++ b/public_html/static/css/master.css
@@ -3,6 +3,7 @@ body
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    
 }
 
 .background-video {
@@ -16,13 +17,14 @@ body
 {
     display: grid;
     grid-template-columns: [L1] 40px [L2] 50px [CC] auto [R2] 50px [R1] 40px;
-    grid-template-rows: [T1] 5rem [T2] 200px [CR] auto [B] 0px;
+    grid-template-rows: [T1] 5rem [T2] minmax(200px, auto) [CR] auto [B] 0px;
 
-    width: 100vw;
-    height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
 
     color: whitesmoke;
     background-color: rgba(80, 80, 80, 0.255);
+    font-family: 'Ubuntu Mono', monospace;
 }
 
 #nav-wrapper
@@ -31,6 +33,7 @@ body
     grid-column: L1/-1;
     grid-row: T1/T2;
     background-color: rgba(80, 80, 80, 0.255)
+    font-family: 'Righteous', cursive;
 }
 
 #content-wrapper
@@ -49,4 +52,22 @@ body
     display: grid;
     align-self: baseline;
     justify-self: baseline;
+}
+
+.secret
+{
+    animation-name: fadeIn;
+    animation-duration: 30s;
+    color: red;
+}
+
+@keyframes fadeIn
+{
+    0% { opacity: 0; }
+    20% { opacity: 0; }
+    40% { opacity: 0; }
+    60% { opacity: 0; }
+    80% { opacity: 0; }
+    99% { opacity: 0; }
+    100% { opacity: 1; }
 }
