--- a/public_html/static/css/master.css
+++ b/public_html/static/css/master.css
@@ -14,3 +14,25 @@ body
     min-height: 100%;
     z-index: -1;
 }
+
+.wrapper {
+    display: grid;
+    grid-template-columns: minmax(5%, 12%) 1fr minmax(5%, 12%);
+    grid-template-rows: 1fr;
+    height: 100%;
+}
+
+.wrapper > *:first-child {
+    grid-column: 2;
+    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 3em;
+    width: 100%;
+}
+
+.text-center{
+    text-align: center;
+}
