--- a/public_html/static/css/navbar.css
+++ b/public_html/static/css/navbar.css
@@ -6,6 +6,7 @@
     background-color: #252525d0;
     font-size: 26px;
     flex-wrap: wrap;
+    z-index: 10;
 }
 
 .navbar-brand {
@@ -65,7 +66,7 @@
 }
 
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 830px) {
     .navbar {
         justify-content: space-between;
         overflow: hidden;
@@ -86,7 +87,7 @@
         height: 0px;
         width: 0px;
         opacity: 0;
-        transition: opacity 0.2s ease-in;
+        transition: opacity 0.3s ease-in-out;
     }
 
     .navbar-item-container.opened {
