--- a/public_html/static/css/home.css
+++ b/public_html/static/css/home.css
@@ -1,7 +1,65 @@
-.welcome-list {
-    list-style-type: upper-roman;
+:root {
+    --bg-color-primary: rgba(0, 78, 109, 0.2);
+    --bg-blur: blur(2px);
 }
 
-.welcome-list > li {
-    margin: 0.5em 0;
+#welcome-list-display > span {
+    font-family: "Ubuntu Mono";
+    font-size: 1.5em;
+    border-right: 2px solid lime;
+    padding-right: 5px;
+    animation: caret 1s steps(1) infinite;
+}
+
+#welcome-list-display > span::before {
+    content: "usr@srv:~$ ";
+    color: lime;
+}
+
+@keyframes caret {
+    50% {
+        border-color: transparent;
+    }
+}
+
+header {
+    animation: fadeIn 0.5s ease-in-out;
+    background-color: var(--bg-color-primary);
+    backdrop-filter: var(--bg-blur);
+    padding: 1em;
+    border-radius: 1rem;
+    text-align: center;
+}
+
+main {
+    opacity: 0;
+    animation: fadeIn 1s ease-in-out 0.5s forwards;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    background-color: var(--bg-color-primary);
+    backdrop-filter: var(--bg-blur);
+    padding: 1em;
+    border-radius: 1rem;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+#preamble-text {
+    text-align: center;
+    margin-bottom: 2em;
+}
+
+#closing-text {
+    text-align: center;
+    margin-top: 2em;
+    margin-bottom: 0;
+}
+
+@media screen and (max-width: 650px) {
+    #welcome-list-display > span {
+        font-size: 1.2em;
+    }
 }
