--- a/public_html/static/css/master.css
+++ b/public_html/static/css/master.css
@@ -4,6 +4,10 @@ body
     color: whitesmoke;
     font-family: "Righteous";
     margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 #bg-video {
@@ -17,9 +21,10 @@ body
 
 .wrapper {
     display: grid;
-    grid-template-columns: minmax(5%, 12%) 1fr minmax(5%, 12%);
+    grid-template-columns: minmax(2em, 7%) 1fr minmax(2em, 7%);
     grid-template-rows: 1fr;
     height: 100%;
+    width: 100%;
 }
 
 .wrapper > *:first-child {
