--- a/public_html/static/css/home.css
+++ b/public_html/static/css/home.css
@@ -3,6 +3,15 @@
     --bg-blur: blur(2px);
 }
 
+#welcome-list-display {
+    background-color: black;
+    justify-content: center;
+    text-align: start;
+    padding: 1em;
+    border-radius: 1rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
 #welcome-list-display > span {
     font-family: "Ubuntu Mono";
     font-size: 1.5em;
@@ -23,24 +32,39 @@
 }
 
 header {
-    animation: fadeIn 0.5s ease-in-out;
+    opacity: 0;
+    animation: fadeIn 0.5s ease-in-out forwards;
     background-color: var(--bg-color-primary);
     backdrop-filter: var(--bg-blur);
     padding: 1em;
     border-radius: 1rem;
     text-align: center;
+    margin-bottom: 2em;
 }
 
 main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.bg-box-1, .bg-box-2 {
     opacity: 0;
-    animation: fadeIn 1s ease-in-out 0.25s forwards;
-    margin-top: 1em;
-    margin-bottom: 1em;
     background-color: var(--bg-color-primary);
     backdrop-filter: var(--bg-blur);
-    padding: 1em;
     border-radius: 1rem;
+    padding: 2em;
+    margin-bottom: 2em;
+    animation: fadeIn 0.5s ease-in-out forwards;
 }
+
+.bg-box-1 {
+    animation-delay: 0.25s;
+}
+.bg-box-2 {
+    animation-delay: 0.5s;
+}
+
 
 @keyframes fadeIn {
     from { opacity: 0; }
